--- a/examples/guides/interactivity/step-1.html
+++ b/examples/guides/interactivity/step-1.html
@@ -34,22 +34,26 @@
         const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
+
         // MAP EVENTS
         // Wait for the map to render for the first time
         map.on('load', () => {
             console.log('Map has loaded!');
         });
+
         // Listen to every move event caused by the user
         const displayCenter = () => {
             const center = map.getCenter();
             const longitude = center.lng.toFixed(6);
             const latitude = center.lat.toFixed(6);
-            const zoom = map.getZoom();
-            console.log(`Center: [${longitude}, ${latitude}] & Zoom: ${zoom}`);
+            const bearing = map.getBearing().toFixed(0);
+            const zoom = map.getZoom().toFixed(2);
+            console.log(`Center: [${longitude}, ${latitude}] - Zoom: ${zoom} - Bearing: ${bearing}º`);
         };
         map.on('move', displayCenter);
 
         //** CARTO VL functionality begins here **//
+
 
     </script>
 </body>
