--- a/examples/guides/interactivity/step-2.html
+++ b/examples/guides/interactivity/step-2.html
@@ -34,22 +34,27 @@
         const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
+
         // MAP EVENTS
         // Wait for the map to render for the first time
         map.on('load', () => {
             console.log('Map has loaded!');
         });
+
         // Listen to every move event caused by the user
         const displayCenter = () => {
             const center = map.getCenter();
             const longitude = center.lng.toFixed(6);
             const latitude = center.lat.toFixed(6);
-            const zoom = map.getZoom();
-            console.log(`Center: [${longitude}, ${latitude}] & Zoom: ${zoom}`);
+            const bearing = map.getBearing().toFixed(0);
+            const zoom = map.getZoom().toFixed(2);
+            console.log(`Center: [${longitude}, ${latitude}] - Zoom: ${zoom} - Bearing: ${bearing}º`);
         };
         map.on('move', displayCenter);
 
+
         //** CARTO VL functionality begins here **//
+
 
         // LAYER EVENTS
         // Add layer as usual
@@ -58,6 +63,7 @@
         const viz = new carto.Viz();
         const layer = new carto.Layer('Cities', source, viz);
         layer.addTo(map);
+
         // Add on 'loaded' event handler to layer
         layer.on('loaded', () => {
             console.log('Cities layer has been loaded!');
