--- a/examples/guides/interactivity/step-3.html
+++ b/examples/guides/interactivity/step-3.html
@@ -34,33 +34,40 @@
         const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
+
         // MAP EVENTS
         // Wait for the map to render for the first time
         map.on('load', () => {
             console.log('Map has loaded!');
         });
+
         // Listen to every move event caused by the user
         const displayCenter = () => {
             const center = map.getCenter();
             const longitude = center.lng.toFixed(6);
             const latitude = center.lat.toFixed(6);
-            const zoom = map.getZoom();
-            console.log(`Center: [${longitude}, ${latitude}] & Zoom: ${zoom}`);
+            const bearing = map.getBearing().toFixed(0);
+            const zoom = map.getZoom().toFixed(2);
+            console.log(`Center: [${longitude}, ${latitude}] - Zoom: ${zoom} - Bearing: ${bearing}º`);
         };
         map.on('move', displayCenter);
 
+
         //** CARTO VL functionality begins here **//
+
 
         // LAYER EVENTS & VARIABLES
         // Add layer as usual
         carto.setDefaultAuth({ user: 'cartovl', apiKey: 'default_public' });
         const source = new carto.source.Dataset('populated_places');
+
         // Viz using a dynamic variable
         const viz = new carto.Viz(`
             @currentFeatures: viewportFeatures()
         `);
         const layer = new carto.Layer('Cities', source, viz);
         layer.addTo(map);
+
         // Add on 'loaded' event handler to layer
         layer.on('loaded', () => {
             console.log('Cities layer has been loaded!');
@@ -68,6 +75,7 @@
 
         // Disable map move listener
         map.off('move', displayCenter);
+
         // Add on 'updated' event handler to layer
         const displayNumberOfCities = () => {
             const numberOfFeatures = viz.variables.currentFeatures.value.length;
