Update examples to use the preferred `username` option in auth

--- a/debug/image-external-no-color.html
+++ b/debug/image-external-no-color.html
@@ -49,7 +49,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
