--- a/debug/interactive-based-styling.html
+++ b/debug/interactive-based-styling.html
@@ -53,7 +53,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
