--- a/debug/viewportAggPluto.html
+++ b/debug/viewportAggPluto.html
@@ -48,7 +48,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
