--- a/debug/viewportagg-perf.html
+++ b/debug/viewportagg-perf.html
@@ -50,7 +50,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
