--- a/examples/guides/image-files/align-image.html
+++ b/examples/guides/image-files/align-image.html
@@ -36,7 +36,7 @@
 
         // Autenticate the client
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
         // Create the source
