--- a/examples/guides/sources/step-2.html
+++ b/examples/guides/sources/step-2.html
@@ -45,7 +45,7 @@
         // DATASET
         // Define Dataset source with custom credentials
         const citiesSource = new carto.source.Dataset('populated_places', {
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
         // Define Viz object with custom style
