--- a/examples/interactivity/interact-multiple-layers.html
+++ b/examples/interactivity/interact-multiple-layers.html
@@ -56,7 +56,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
