--- a/examples/misc/legends/legend-buckets.html
+++ b/examples/misc/legends/legend-buckets.html
@@ -46,7 +46,7 @@
     map.touchZoomRotate.disableRotation();
     // Autenticate the client
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
     // Create the source
