--- a/examples/misc/legends/legend-classifier.html
+++ b/examples/misc/legends/legend-classifier.html
@@ -49,7 +49,7 @@
 
     // Authenticate the client
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
