--- a/examples/misc/legends/legend-numeric-chart.html
+++ b/examples/misc/legends/legend-numeric-chart.html
@@ -49,7 +49,7 @@
     map.touchZoomRotate.disableRotation();
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
