--- a/examples/misc/populated-places.html
+++ b/examples/misc/populated-places.html
@@ -47,7 +47,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
