--- a/examples/styling/style-with-variables.html
+++ b/examples/styling/style-with-variables.html
@@ -49,7 +49,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
