--- a/test/benchmark/fps/benchmark.html
+++ b/test/benchmark/fps/benchmark.html
@@ -36,7 +36,7 @@
     });
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
