--- a/debug/layer-visibility.html
+++ b/debug/layer-visibility.html
@@ -53,7 +53,7 @@
     let layer2;
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
