--- a/debug/line-interactivity.html
+++ b/debug/line-interactivity.html
@@ -66,7 +66,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
