--- a/examples/advanced/hurricane-harvey.html
+++ b/examples/advanced/hurricane-harvey.html
@@ -50,7 +50,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
