--- a/examples/advanced/landing-page/detroit-development.html
+++ b/examples/advanced/landing-page/detroit-development.html
@@ -39,7 +39,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
