--- a/examples/advanced/landing-page/hurricane-harvey.html
+++ b/examples/advanced/landing-page/hurricane-harvey.html
@@ -41,7 +41,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
