--- a/examples/advanced/landing-page/spend-data.html
+++ b/examples/advanced/landing-page/spend-data.html
@@ -41,7 +41,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
