--- a/examples/basics/query-layer.html
+++ b/examples/basics/query-layer.html
@@ -52,7 +52,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
