--- a/examples/basics/select-layer.html
+++ b/examples/basics/select-layer.html
@@ -67,7 +67,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
