--- a/examples/guides/image-files/built-in-image.html
+++ b/examples/guides/image-files/built-in-image.html
@@ -35,7 +35,7 @@
 
         // Autenticate the client
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
         // Create the source
