--- a/examples/guides/interactivity/popups.html
+++ b/examples/guides/interactivity/popups.html
@@ -38,7 +38,7 @@
         map.addControl(nav, 'top-left');
 
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
