--- a/examples/interactivity/animation-controls.html
+++ b/examples/interactivity/animation-controls.html
@@ -244,7 +244,7 @@
 
         // Define user
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
