--- a/examples/interactivity/click.html
+++ b/examples/interactivity/click.html
@@ -53,7 +53,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
