--- a/examples/interactivity/enter-leave.html
+++ b/examples/interactivity/enter-leave.html
@@ -44,7 +44,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
