--- a/examples/interactivity/histogram.html
+++ b/examples/interactivity/histogram.html
@@ -31,7 +31,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-        user: 'cartovl',
+        username: 'cartovl',
         apiKey: 'default_public'
     });
 
