--- a/examples/interactivity/interactive-images.html
+++ b/examples/interactivity/interactive-images.html
@@ -55,7 +55,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
