--- a/examples/misc/edit-sql-expressions.html
+++ b/examples/misc/edit-sql-expressions.html
@@ -63,7 +63,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
