--- a/examples/misc/legends/legend-base.html
+++ b/examples/misc/legends/legend-base.html
@@ -47,7 +47,7 @@
     map.touchZoomRotate.disableRotation();
     // Autenticate the client
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
