--- a/examples/misc/legends/legend-top.html
+++ b/examples/misc/legends/legend-top.html
@@ -48,7 +48,7 @@
 
     // Authenticate the client
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
