--- a/examples/styling/color-schemes.html
+++ b/examples/styling/color-schemes.html
@@ -65,7 +65,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
