--- a/examples/styling/color-spaces.html
+++ b/examples/styling/color-spaces.html
@@ -78,7 +78,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
