--- a/examples/styling/image-external.html
+++ b/examples/styling/image-external.html
@@ -49,7 +49,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
