--- a/examples/styling/image-multiple.html
+++ b/examples/styling/image-multiple.html
@@ -51,7 +51,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
