--- a/examples/styling/style-by-category.html
+++ b/examples/styling/style-by-category.html
@@ -66,7 +66,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
