--- a/examples/styling/style-by-number.html
+++ b/examples/styling/style-by-number.html
@@ -76,7 +76,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'cartovl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
