Display username and not user in more examples

--- a/debug/animation_sql_notz.html
+++ b/debug/animation_sql_notz.html
@@ -57,7 +57,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      user: 'cartogl',
+      username: 'cartogl',
       apiKey: 'default_public'
     });
 
