--- a/examples/advanced/landing-page/rivers.html
+++ b/examples/advanced/landing-page/rivers.html
@@ -41,7 +41,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'mamataakella',
+      username: 'mamataakella',
       apiKey: 'default_public'
     });
 
