--- a/examples/misc/legends/legend-lines.html
+++ b/examples/misc/legends/legend-lines.html
@@ -48,7 +48,7 @@
     map.touchZoomRotate.disableRotation();
     // Autenticate the client
     carto.setDefaultAuth({
-      user: 'dmanzanares',
+      username: 'dmanzanares',
       apiKey: 'default_public'
     });
 
