--- a/debug/local-windshaft.html
+++ b/debug/local-windshaft.html
@@ -50,7 +50,7 @@
 
     // Define user
     carto.setDefaultAuth({
-      user: 'localhost',
+      username: 'localhost',
       apiKey: '1234'
     });
     carto.setDefaultConfig({
