--- a/debug/multi-anim.html
+++ b/debug/multi-anim.html
@@ -42,7 +42,7 @@
         map.addControl(nav, 'top-left');
 
         carto.setDefaultAuth({
-            user: 'rochoa',
+            username: 'rochoa',
             apiKey: 'default_public'
         });
         const s = carto.expressions;
