--- a/examples/guides/ramp/population-density-classified.html
+++ b/examples/guides/ramp/population-density-classified.html
@@ -6,27 +6,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <!-- Include CARTO VL JS -->
-    <script src="../../../../dist/carto-vl.js"></script>
+    <script src="../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
     <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
     <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
-    <style>
-        html,
-        body {
+    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <style type="text/css">
+        .toolbox {
+            max-width: 350px;
+        }
+
+        #controls .actions li h2 {
+            font: 12px/16px 'Open Sans';
             margin: 0;
         }
 
-        #map {
-            position: absolute;
-            width: 100%;
-            height: 100%;
+        #controls .actions li {
+            margin-bottom: 24px;
+        }
+
+        #controls .actions input {
+            margin-top: 4px;
+        }
+
+        #controls .actions input:checked+label h2 {
+            font-weight: 600;
+        }
+
+        #controls .actions .description {
+            margin-top: 4px;
         }
     </style>
 </head>
 
 <body>
     <div id="map"></div>
+    <aside class="toolbox">
+        <div class="box">
+            <header>
+                <h1>Select Visualization</h1>
+            </header>
+            <section>
+                <p class="description open-sans">Change the visualization of the layer</p>
+                <div id="controls">
+                    <ul class="actions">
+                        <li>
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(globalQuantiles($dn, 3), [green, yellow, red])')"
+                                id="viz1" checked>
+                            <label for="viz1">
+                                <h2>ramp(globalQuantiles($dn, 3), [green, yellow, red])</h2>
+                                <p class="description open-sans"> Classify by dividing the dataset in three quantiles.
+                                    The first bucket will contain the lower 33% of the data samples, the second the
+                                    middle 33%, and the last one the last 33%. </p>
+                            </label>
+                        </li>
+                        <li>
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(globalEqIntervals($dn, 3), [green, yellow, red])')"
+                                id="viz2">
+                            <label for="viz2">
+                                <h2>ramp(globalEqIntervals($dn, 3), [green, yellow, red])</h2>
+                                <p class="description open-sans">Classify by getting the minimum and maximum values on
+                                    the entire dataset and setting the buckets as [MIN, MIN*66%+MAX*33%],
+                                    [MIN*66%+MAX*33%, MIN*33%+MAX*66%], [MIN*33%+MAX*66%, MAX]. </p>
+                            </label>
+                        </li>
+                        <li>
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(viewportQuantiles($dn, 3), [green, yellow, red])')"
+                                id="viz3">
+                            <label for="viz3">
+                                <h2>'ramp(viewportQuantiles($dn, 3), globalMin($dn), globalMax($dn)), [green, yellow,
+                                    red])'</h2>
+                                <p class="description open-sans">Equivalent to `ramp(globalQuantiles($dn, 3), [green,
+                                    yellow, red])` but by only using the samples that are shown on the viewport. Zoom
+                                    in to see the dynamic effect. Note that the legend is updated accordingly.</p>
+                            </label>
+                        </li>
+                        <li>
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(viewportEqIntervals($dn, 3), [green, yellow, red])')"
+                                id="viz4">
+                            <label for="viz4">
+                                <h2>'ramp(viewportEqIntervals($dn, 3), 0, 160), [green, yellow, red])'</h2>
+                                <p class="description open-sans">Equivalent to `ramp(globalEqIntervals($dn, 3), [green,
+                                    yellow, red])` but by only using the samples that are shown on the viewport. Zoom
+                                    in to see the dynamic effect. Note that the legend is updated accordingly.</p>
+                            </label>
+                        </li>
+                    </ul>
+                    <div id="info"></div>
+                    <p id="content-title"></p>
+                    <ul id="content"></ul>
+                </div>
+            </section>
+            <footer class="js-footer"></footer>
+        </div>
+    </aside>
 
     <script>
         const map = new mapboxgl.Map({
@@ -43,17 +117,40 @@
 
         const source = new carto.source.Dataset("pop_density_points");
         const viz = new carto.Viz(`
-            width: 2
-            color: ramp(globalQuantiles($dn, 12), [
-            #009392,
-            #e9e29c,
-            #cf597e
-        ])
+            width: scaled(0.7)
+            color: ramp(globalQuantiles($dn, 3), [green, yellow, red])
             strokeWidth: 0
         `);
         const layer = new carto.Layer('layer', source, viz);
 
         layer.addTo(map, 'watername_ocean');
+
+        layer.on('updated', () => {
+            // Get the legend
+            if (!layer.viz.color.getLegendData){
+                return;
+            }
+
+            const colorLegend = layer.viz.color.getLegendData();
+
+            let colorLegendList = '';
+
+            colorLegend.data.forEach((legend) => {
+                const colorHex = rgbToHex(legend.value);
+                const keyMin = legend.key[0].toFixed(2).replace('Infinity', '∞');
+                const keyMax = legend.key[1].toFixed(2).replace('Infinity', '+∞');
+
+                colorLegendList +=
+                    `<li><span class="point-mark" style="background-color:${colorHex};"></span> <span>[${keyMin}, ${keyMax}]</span></li>\n`;
+            });
+            // Update the information
+            document.getElementById('content').innerHTML = colorLegendList;
+            document.getElementById('content-title').innerHTML = `Legend of ${colorLegend.name}`;
+        });
+
+        function rgbToHex(color) {
+            return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
+        }
     </script>
 </body>
 
