--- a/examples/guides/ramp/accidents-images.html
+++ b/examples/guides/ramp/accidents-images.html
@@ -47,7 +47,7 @@
         });
 
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
