--- a/examples/guides/ramp/population-density-classified.html
+++ b/examples/guides/ramp/population-density-classified.html
@@ -111,7 +111,7 @@
         });
 
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
