--- a/examples/guides/ramp/accidents-all.html
+++ b/examples/guides/ramp/accidents-all.html
@@ -46,7 +46,7 @@
         });
 
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
