--- a/examples/guides/ramp/accidents-bubblemap.html
+++ b/examples/guides/ramp/accidents-bubblemap.html
@@ -76,7 +76,7 @@
         });
 
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
