--- a/examples/guides/ramp/election-basic.html
+++ b/examples/guides/ramp/election-basic.html
@@ -37,7 +37,7 @@
         });
 
         carto.setDefaultAuth({
-            user: 'cartovl',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
 
