--- a/examples/guides/ramp/population-density-classified.html
+++ b/examples/guides/ramp/population-density-classified.html
@@ -37,6 +37,9 @@
         #controls .actions .description {
             margin-top: 4px;
         }
+        #content, #controls {
+            font-family: 'Open Sans';
+        }
     </style>
 </head>
 
@@ -94,8 +97,8 @@
                         </li>
                     </ul>
                     <div id="info"></div>
-                    <p id="content-title"></p>
-                    <ul id="content"></ul>
+                    <h1 id="content-title"></h1>
+                    <ul id="content" class="description open-sans"></ul>
                 </div>
             </section>
             <footer class="js-footer"></footer>
