--- a/examples/guides/interactivity/step-4.html
+++ b/examples/guides/interactivity/step-4.html
@@ -58,7 +58,7 @@
 
         // LAYER EVENTS & VARIABLES
         // Add layer as usual
-        carto.setDefaultAuth({ user: 'cartovl', apiKey: 'default_public' });
+        carto.setDefaultAuth({ username: 'cartovl', apiKey: 'default_public' });
         const source = new carto.source.Dataset('populated_places');
 
         // Viz using a dynamic variable
