--- a/examples/guides/ramp/election-others-bucket.html
+++ b/examples/guides/ramp/election-others-bucket.html
@@ -11,18 +11,7 @@
     <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
     <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
-    <style>
-        html,
-        body {
-            margin: 0;
-        }
-
-        #map {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
