--- a/examples/guides/ramp/population-density-classified.html
+++ b/examples/guides/ramp/population-density-classified.html
@@ -12,42 +12,6 @@
     <!-- Include Mapbox GL CSS -->
     <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
-    <style type="text/css">
-        .toolbox {
-            max-width: 350px;
-        }
-
-        #controls .actions li h2 {
-            font: 12px/16px 'Open Sans';
-            margin: 0;
-        }
-
-        #controls .actions li {
-            margin-bottom: 24px;
-        }
-
-        #controls .actions input {
-            margin-top: 4px;
-        }
-
-        #controls .actions input:checked+label h2 {
-            font-weight: 600;
-        }
-
-        #controls .actions .description {
-            margin-top: 4px;
-        }
-        #content, #controls {
-            font-family: 'Open Sans';
-        }
-        #controls .actions .description span {
-            background: #f5f5f5;
-            padding: 6px;
-            font-family: 'Roboto Mono';
-            display: block;
-            margin: 2px 0;
-        }
-    </style>
 </head>
 
 <body>
@@ -77,8 +41,8 @@
                             <label for="viz2">
                                 <h2>ramp(globalEqIntervals($dn, 3), [green, yellow, red])</h2>
                                 <p class="description open-sans">Classify by getting the minimum and maximum values on
-                                    the entire dataset and setting the buckets <span>as [MIN, MIN*66%+MAX*33%],
-                                    [MIN*66%+MAX*33%, MIN*33%+MAX*66%], [MIN*33%+MAX*66%, MAX].</span> </p>
+                                    the entire dataset and setting the buckets as <span> [MIN, MIN*66%+MAX*33%],
+                                    [MIN*66%+MAX*33%, MIN*33%+MAX*66%], [MIN*33%+MAX*66%, MAX]</span></p>
                             </label>
                         </li>
                         <li>
@@ -87,8 +51,8 @@
                             <label for="viz3">
                                 <h2>'ramp(viewportQuantiles($dn, 3), globalMin($dn), globalMax($dn)), [green, yellow,
                                     red])'</h2>
-                                <p class="description open-sans">Equivalent to <span>`ramp(globalQuantiles($dn, 3), [green,
-                                    yellow, red])`</span> but by only using the samples that are shown on the viewport. Zoom
+                                <p class="description open-sans">Equivalent to <span>ramp(globalQuantiles($dn, 3), [green,
+                                    yellow, red])</span> but by only using the samples that are shown on the viewport. Zoom
                                     in to see the dynamic effect. Note that the legend is updated accordingly.</p>
                             </label>
                         </li>
@@ -97,7 +61,7 @@
                                 id="viz4">
                             <label for="viz4">
                                 <h2>'ramp(viewportEqIntervals($dn, 3), 0, 160), [green, yellow, red])'</h2>
-                                <p class="description open-sans">Equivalent to <span>`ramp(globalEqIntervals($dn, 3), [green, yellow, red])`</span> but by only using the samples that are shown on the viewport. Zoom
+                                <p class="description open-sans">Equivalent to <span>ramp(globalEqIntervals($dn, 3), [green, yellow, red])</span> but by only using the samples that are shown on the viewport. Zoom
                                     in to see the dynamic effect. Note that the legend is updated accordingly.</p>
                             </label>
                         </li>
