Remove trailing comma and space

--- a/examples/guides/getting-started/step-1.html
+++ b/examples/guides/getting-started/step-1.html
@@ -27,8 +27,7 @@
             container: 'map',
             style: carto.basemaps.voyager,
             center: [0, 30],
-            zoom: 2,
-
+            zoom: 2
         });
         map.touchZoomRotate.disableRotation();
 
