Add charset in getting started example (used as template in some guides)

--- a/examples/guides/getting-started/step-1.html
+++ b/examples/guides/getting-started/step-1.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+
     <!-- Include CARTO VL JS -->
     <script src="../../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
