--- a/examples/guides/getting-started/step-2.html
+++ b/examples/guides/getting-started/step-2.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+
     <!-- Include CARTO VL JS -->
     <script src="../../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
@@ -15,7 +17,6 @@
             height: 100%;
             width: 100%;
         }
-
     </style>
 </head>
 
@@ -28,8 +29,7 @@
             container: 'map',
             style: carto.basemaps.voyager,
             center: [0, 30],
-            zoom: 2,
-
+            zoom: 2
         });
 
         //** CARTO VL functionality begins here **//
