--- a/examples/misc/legends/legend-numeric-chart.html
+++ b/examples/misc/legends/legend-numeric-chart.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Include CARTO VL JS -->
-  <script src="../../../../dist/carto-vl.js"></script>
+  <script src="../../../dist/carto-vl.js"></script>
   <!-- Include Chart JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
   <!-- Include Mapbox GL JS -->
